--- a/balls/index.html
+++ b/balls/index.html
@@ -5,25 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Land</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
       Canvas Land
       <span class="links">
-        <a href="/">Sierpiński Triangle</a> | <a href="/mousetrail">Mousetrail</a> |
-        <a href="/slimemold" class="active">Slimemold</a>
+        <a href="/" class="active">Sierpiński Triangle</a> | <a href="/mousetrail">Mousetrail</a> |
+        <a href="/slimemold">Slimemold</a>
       </span>
     </nav>
-    <div id="content">
-      <div class="section">
-        <h1>Slime Mold Simulation</h1>
-
-        <div class="controls"></div>
-        <canvas id="canvas" width="850" height="850"></canvas>
-      </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="helper.js"></script>
     <script src="main.js"></script>
+    <script src="../dat.gui.min.js"></script>
+    <!--     <script src="trail.js"></script>
+ -->
   </body>
 </html>
